# URSA-OSCAR

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  INSTALL.md  Makefile  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Docs/: 03-mcp-tool-contract.md  14-current-architecture-and-filelist.md  17-oauth-setup.md  30-developer-guide.md  31-architecture-deep-dive.md  32-ai-proxy-reference.md  33-operator-setup-guide.md  34-tool-reference.md  35-migration-0.12-to-0.13.md  HANDOVER-APEX-SECURITY-1.1.9.md  HANDOVER-ARCHITECT-BRIEF.md  HANDOVER-FROM-URSA.md  URSA-OSCAR_Design.md  URSA-OSCAR_Framework.md
Docs/architect-decisions/: adr-001-frontend-stack.md  adr-002-mcp-server-template-adoption.md  adr-003-mcp-as-api-proxy.md  adr-004-duckdb-rlock.md  phase-0-apex-findings.md  phase-0-fitbitkb-findings.md  phase-0-synthesis.md
Docs/install/: concepts.md  linux.md  macos.md  mcp-optional-addon.md  synology.md  troubleshooting.md  truenas.md  windows.md
Docs/screenshots/: generate_assets.py
backend/: Dockerfile  pyproject.toml
backend/scripts/: backfill_session_pressure.py
backend/src/ursa_oscar/: config.py  main.py
backend/src/ursa_oscar/ai_proxy/: __init__.py  config_store.py  context_budget.py  prompt.py  secrets.py  tool_index.py  tool_prepass.py  tools.py
backend/src/ursa_oscar/ai_proxy/providers/: base.py  claude.py  openai_compat.py  presets.py
backend/src/ursa_oscar/analytics/: cache.py  correlation.py  edf_parser.py  event_detector.py  lag.py  leak_detector.py  manual_log_summary.py  metric_resolver.py  multivariate.py  period_compare.py  predict.py  projections.py  recompute_summary.py  session_analyzer.py  settings_parser.py  summary_builder.py  trend.py  usage_rate.py
backend/src/ursa_oscar/api/: ai.py  analytics.py  events.py  exports.py  exports_oscar.py  health.py  help.py  imports.py  manual_logs.py  nights.py  profile.py  reports.py  system.py  timeseries.py  vocab.py
backend/src/ursa_oscar/auth/: __init__.py  hashing.py  middleware.py  rate_limit.py  routes.py  service_tokens.py  store.py  tokens.py
backend/src/ursa_oscar/data/: __init__.py  profile.json.community-default  vocab.json.community-default
backend/src/ursa_oscar/diagnostics/: pressure_audit.py
backend/src/ursa_oscar/help/: __init__.py  registry.py
backend/src/ursa_oscar/ingestion/: airsense11_layout.py  importer.py  watcher.py
backend/src/ursa_oscar/models/: domain.py  manual_logs.py  profile.py
backend/src/ursa_oscar/reports/: __init__.py  data_collectors.py  generator.py  methodology_registry.py
backend/src/ursa_oscar/reports/templates/: _base.html  _style.css  analytical.html  full_clinical.html  summary.html
backend/src/ursa_oscar/services/: __init__.py  import_worker.py  profile_vocab_sync.py
backend/src/ursa_oscar/storage/: db.py  migrations.py  profile_store.py  schema.sql  vocab_store.py
backend/src/ursa_oscar/storage/repositories/: events.py  import_jobs.py  manual_logs.py  nights.py  sessions.py  timeseries.py
backend/tests/: _scratch_mcp_call.py  _scratch_mcp_client.py  conftest.py
backend/tests/integration/: test_ai_proxy.py  test_analytical_cache.py  test_analytics_and_delete.py  test_api_endpoints.py  test_async_import.py  test_auth.py  test_claude_provider.py  test_help_no_drift.py  test_lag_correlation.py  test_multivariate_correlation.py  test_oscar_exports.py  test_pdf_reports.py  test_predict.py  test_projections.py  test_service_tokens.py  test_session_exclusion.py  test_upload_endpoint.py
backend/tests/smoke/: test_claude_live_smoke.py
backend/tests/unit/: test_context_budget.py  test_edf_parser.py  test_importer.py  test_metric_vocabulary.py  test_migrations.py  test_settings_parser.py  test_stable_prefix_caching.py  test_storage_roundtrip.py  test_system_versions.py  test_tool_index.py  test_tool_prepass.py
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AboutModal.tsx  AiChatPanel.tsx  CalendarHeatmap.tsx  EventRug.tsx  Histogram.tsx  Layout.tsx  TimeSeriesChart.tsx
frontend/src/help/: topics.ts
frontend/src/help/content/: about-credits.md  about-future-direction.md  about-license.md  about-version.md  ahi-and-subindices.md  arch-ai-context.md  arch-deployment.md  arch-multi-instance.md  arch-network-security.md  arch-overview.md  arch-single-tenant.md  first-run-setup.md  importing-sd-card.md  leak-metrics.md  methodology-lag-correlation.md  methodology-linear-trend.md  methodology-partial-correlation.md  (+21 more)
frontend/src/lib/: auth.ts  format.ts  timeOffset.ts
frontend/src/pages/: Account.tsx  Daily.tsx  DataManagement.tsx  Events.tsx  Export.tsx  Help.tsx  Import.tsx  Login.tsx  ManualLogs.tsx  Overview.tsx  Profile.tsx  Reports.tsx  Settings.tsx  SettingsAi.tsx  Setup.tsx  Statistics.tsx  Trends.tsx
infra/: .env.example  build_and_push.ps1  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.yml  verify-mcp-live.sh
mcp-server/: Dockerfile  pyproject.toml
mcp-server/src/ursa_oscar_mcp/: __main__.py  auth.py  client.py  envelope.py  helpers.py  jwt_tokens.py  server.py
mcp-server/src/ursa_oscar_mcp/tools/: ahi_breakdown.py  analyze_correlation.py  analyze_lag_correlation.py  analyze_multivariate_correlation.py  analyze_prediction.py  compare_periods.py  event_distribution.py  generate_report.py  get_help_topic.py  get_manual_log_summary.py  get_trend.py  leak_profile.py  list_nights.py  nightly_summary.py  pressure_profile.py  session_breakdown.py  trigger_import.py  user_profile.py
mcp-server/tests/: conftest.py  test_auth_provider.py  test_token_resolution.py  test_tools.py
mcp-server/tests/verification/: test_auth_boundary.py
watcher/: Dockerfile  pyproject.toml
watcher/src/ursa_oscar_watcher/: __main__.py  api_client.py  config.py  fingerprint.py  watcher.py
watcher/tests/: test_api_client.py  test_token_resolution.py  test_watcher.py
