[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ursa-oscar-backend"
version = "0.1.0"
description = "URSA-OSCAR backend — analytics + ingestion + FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.13",
    "pydantic-settings>=2.6",
    "duckdb>=1.1.0",
    "pyedflib>=0.1.38",
    "mne>=1.7",
    "numpy>=1.26",
    "pandas>=2.0",
    "watchdog>=4.0",
    "python-multipart>=0.0.27",
    # Phase-2-polish Item 5: /api/v1/system/verify-mcp hits the MCP container
    # over kairos-net to run the 4 checks from infra/verify-mcp-live.sh.
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ursa_oscar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
