[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ursa-oscar-backend"
version = "1.1.3"
description = "URSA-OSCAR backend — analytics + ingestion + FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.13",
    "pydantic-settings>=2.6",
    "duckdb>=1.1.0",
    "pyedflib>=0.1.38",
    "mne>=1.7",
    "numpy>=1.26",
    "pandas>=2.0",
    # Phase 3 Items 5A-5D — analytical endpoints. scipy.stats provides
    # pearsonr (returns r + p-value in one call) for /analytics/correlation
    # and linregress (slope + r² + p-value + stderr) for /analytics/trend.
    # numpy + pandas already handle the aggregation paths.
    "scipy>=1.14",
    # Phase 6 Ticket 6.1 — multivariate (partial) correlation uses sklearn's
    # LinearRegression to compute residuals before the final Pearson
    # call. Could be hand-rolled with numpy.linalg.lstsq but the sklearn
    # API is what every reference implementation uses, so adopting it
    # makes the code easier to validate against the literature.
    "scikit-learn>=1.5",
    "watchdog>=4.0",
    "python-multipart>=0.0.27",
    # Phase-2-polish Item 5: /api/v1/system/verify-mcp hits the MCP container
    # over kairos-net to run the 4 checks from infra/verify-mcp-live.sh.
    "httpx>=0.27",
    # Phase 5 — AI proxy. Fernet for at-rest secret encryption (already
    # transitively pulled in by httpx/cryptography, made explicit here)
    # + the official Anthropic SDK for the Claude adapter. The OpenAI-
    # compat adapter uses raw httpx for the chat-completions stream
    # (no SDK dependency).
    "cryptography>=42.0",
    "anthropic>=0.40",
    # Phase 6 Ticket 6.3 — provider PDF reports. Jinja2 renders the
    # report HTML; WeasyPrint converts HTML→PDF. WeasyPrint has
    # system-level dependencies on libpango/libcairo/fontconfig which
    # are installed in the API Dockerfile.
    "Jinja2>=3.1.2",
    "WeasyPrint>=60.0",
    # Phase 6.4 — single-user authentication.
    #   passlib[argon2] pulls in argon2-cffi as the underlying C
    #   implementation. OWASP-recommended Argon2id for password hashing.
    #   python-jose[cryptography] for HS256 JWT signing/verification.
    "passlib[argon2]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ursa_oscar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
