[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ursa-oscar-mcp"
version = "1.1.8"
description = "URSA-OSCAR MCP server — lifted from APEX template (Decision 10, ADR-002)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp==3.2.4",
    "mcp==1.27.0",
    "pydantic>=2.13",
    "starlette==1.0.0",
    "uvicorn==0.46.0",
    "python-multipart>=0.0.27",
    "httpx>=0.27",
    # Phase 6.4 — JWT bearer auth path (decode only; same algo + secret
    # as the API container).
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ursa_oscar_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src", "../backend/src"]
