[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ursa-oscar-watcher"
version = "0.1.0"
description = "URSA-OSCAR file-watcher daemon (Phase 4)"
requires-python = ">=3.11"
dependencies = [
    "watchdog>=4.0",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ursa_oscar_watcher"]
