[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ursa-oscar-watcher"
version = "1.1.9"
description = "URSA-OSCAR file-watcher daemon — Phase 4 Ticket 3 / Phase 6.4 auth."
requires-python = ">=3.11"
dependencies = [
    # We poll via os.scandir rather than fsevents — bind-mounts over
    # SMB/NFS fire spurious events. watchdog stays out of the deps tree.
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ursa_oscar_watcher"]
